--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -29,7 +29,6 @@
   "dr_auroraRepairedBreathable": "The air filtration system roars to life!",
   "dr_lifepodHitBottom": "The lifepod has hit bottom!",
   "dr_notEnoughCraftPower": "Not enough power (need {0}).",
-  "dr_unbreathableAir": "The surface air is not breathable!",
   "dr_vehicleExitPowerLoss": "{0} drained of {1} energy for exiting at {2} depth.",
   
   "dr_tut_exosuitVehicleExitPowerLoss": "Although more efficient than the Seamoth, the Prawn suit\nstill draws power when exited at depth.",
@@ -40,6 +39,7 @@
   "dr_warn_crushDamage": "The pressure is crushing you!",
   "dr_warn_bendsImminent": "Decompression Warning\nDive to Safe Depth!",
   "dr_warn_bendsDamage": "You have the bends! Slow your ascent!",
+  "dr_warn_unbreathableAir": "The surface air is not breathable!",
   
   "dr_run_death1": "Survived for {0} days while dying {1} times.",
   "dr_run_death2": "Died to {0}.",
