Add hints to highscore window.

--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -44,5 +44,31 @@
   "dr_run_death1": "Survived for {0} days while dying {1} times.",
   "dr_run_death2": "Died to {0}.",
   "dr_run_victory": "Victory in {1} deaths and {0} days!",
-  "dr_run_deathlessVictory": "Flawless victory in {0} days!"
+  "dr_run_deathlessVictory": "Flawless victory in {0} days!",
+  
+  "dr_hint1": "Eating certain native fish may help purge nitrogen.",
+  "dr_hint2": "First aid kits not only heal you, they also purge nitrogen.",
+  "dr_hint3": "Did you know eating raw bladderfish yields oxygen?",
+  "dr_hint4": "Stay low to the ground and keep moving.",
+  "dr_hint5": "Enemies only chase you if they can see you!",
+  "dr_hint6": "Hold a fish in your hand: many enemies will bite it instead of you!",
+  "dr_hint7": "You swim faster while at the surface.",
+  "dr_hint8": "You swim faster while your hands are free.",
+  "dr_hint9": "Low on air? Top off at a friendly brain coral!",
+  "dr_hint10": "Brain corals can be planted.",
+  "dr_hint11": "Mark your floating pumps with beacons!",
+  "dr_hint12": "Air from pumps also disperses nitrogen more quickly.",
+  "dr_hint13": "You can carry more than one air tank. Just remember to fill any spares!",
+  "dr_hint14": "Ascend slowly. Think quickly.",
+  "dr_hint15": "Ascending too quickly will rapidly lower your safe diving depth!",
+  "dr_hint16": "Keep your food and water topped up: it slowly heals you!",
+  "dr_hint17": "Thirsty? Cut fresh seaweed and eat immediately!",
+  "dr_hint18": "Repair your Escape Pod for better power generation!",
+  "dr_hint19": "Radiation increases power consumption.",
+  "dr_hint20": "Reduce, reuse, recycle.",
+  "dr_hint21": "The Aurora's air filtration systems need power to work.",
+  "dr_hint22": "In case of quantum detonation, dive deep and hide inside.",
+  "dr_hint23": "Surviving longer gives you a better score, but winning faster is worth even more!",
+  "dr_hint24": "The more difficult your run is, the higher your score.",
+  "dr_hint25": "Challenges grant you large score bonuses."
 }
