Make encyclopedia entries localisable.

--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -17,9 +17,13 @@
   "deathrunremade_acidpowercell": "Lead Acid Power Cell",
   "Tooltip_deathrunremade_acidpowercell": "A basic lead/acid vehicle power source - not super powerful, but it IS rechargeable.",
   "deathrunremade_decompressionmodule": "Nano Decompression Module",
-  "Tooltip_deathrunremade_decompressionmodule": "Eliminates nitrogen from the bloodstream of vehicle pilot. Reduces energy expended when exiting the vehicle. Stacking multiple modules increases the benefit.",
+  "Tooltip_deathrunremade_decompressionmodule": "Eliminates nitrogen from the bloodstream of a vehicle pilot. Reduces the amount of energy expended when exiting small submersibles. Stacking multiple modules increases the benefit.\n\nThis module provides no additional benefit for submersibles with sophisticated airlock systems like the Cyclops.",
+  "Ency_deathrunremade_decompressionmodule": "Decompression Module",
+  "EncyDesc_deathrunremade_decompressionmodule": "Purges nitrogen from the pilot's bloodstream and reduces the energy costs for exiting a vehicle. Can be stacked for additional improvement.",
   "deathrunremade_filterchip": "Integrated Air Filter",
   "Tooltip_deathrunremade_filterchip": "Makes surface air breathable and purges nitrogen from the bloodstream while indoors. Comes with an integrated Compass.",
+  "Ency_deathrunremade_filterchip": "Integrated Filter Chip",
+  "EncyDesc_deathrunremade_filterchip": "Provides bloodstream filtering, rendering the surface air breathable and purging nitrogen while the wearer is indoors. Comes with a free Compass. Alterra staff is advised that the needles required for direct tissue access are very small.",
   "deathrunremade_lavalizardscale": "Lava Lizard Scale",
   "Tooltip_deathrunremade_lavalizardscale": "A scale from a Lava Lizard. Has uses in depth and heat resistant fabrication.",
   "deathrunremade_spineeelscale": "River Prowler Scale",
@@ -38,6 +42,28 @@
   "Tooltip_deathrunremade_photosynthesistank": "A lightweight air tank housing microorganisms which produce oxygen when exposed to sunlight.",
   "deathrunremade_photosynthesistanksmall": "Small Photosynthesis Tank",
   "Tooltip_deathrunremade_photosynthesistanksmall": "An air tank housing microorganisms which produce oxygen when exposed to sunlight.",
+  
+  "EncyPath_Deathrun": "Deathrun",
+  "Ency_Deathrun_Intro": "A Deathrun Introduction",
+  "EncyDesc_Deathrun_Intro": "Think you're a jaded Planet 4546B veteran? Well then try a Death Run! You will need all the skills you've learned to handle the onslaught of aggressive creatures, increased damage, the unbreathable atmosphere, nitrogen and 'The Bends', the engulfing radiation, the expensive fabrication costs, and many other hazards!\n\nDeathrun is less about winning and more about how much you can achieve before meeting your untimely demise. Your score improves the longer you survive and the more progress you make in the game. Good luck!",
+  "Ency_Deathrun_Aggression": "Creature Aggression",
+  "EncyDesc_Deathrun_Aggression": "Local scans show the native life on planet 4546B to be extremely aggressive. Stay low to the ground and avoid hovering in one place for too long.",
+  "Ency_Deathrun_Atmosphere": "Unbreathable Atmosphere",
+  "EncyDesc_Deathrun_Atmosphere": "The atmosphere of planet 4546B is poisonous to humans. Alterra provides you with blueprints for high-tech floating pumps capable of filtering the surface air to a breathable mixture.\n\nAll purchases final. Alterra makes no guarantees for the continued operation of these pumps in environments with high background radiation.\n\n1. Use filter pumps to breathe surface air.",
+  "Ency_Deathrun_CrushDepth": "Crush Depth",
+  "EncyDesc_Deathrun_CrushDepth": "An unaided diver on planet 4546B should venture no deeper than {0}m without either an improved diving suit or submersible support. While many types of diving suits will extend this range, reinforced suits offer the best protection.\n\n1. Personal safe depth {0}m.\n2. Equip better dive suits for better protection.\n3. Scan deep creatures for insight on more depth-resistant materials.",
+  "Ency_Deathrun_Explosion": "Quantum Explosion",
+  "EncyDesc_Deathrun_Explosion": "Simulations show that in the unlikely event of a quantum drive explosion on planet 4546B the shockwave would be felt for {0}m below the surface. In line with emergency training protocols Alterra staff is advised to be prepared to seek shelter as deep as possible, preferably inside a reinforced structure.\n\n1. Explosion shockwave down to {0}m.\n",
+  "Ency_Deathrun_Lifepod": "Lifepod Flotation Failure",
+  "EncyDesc_Deathrun_Lifepod": "This lifepod has malfunctioned and its flotation devices have failed. Any repair costs incurred from returning the pod in an inadequate state will be deducted from your pay.",
+  "Ency_Deathrun_Nitrogen": "Nitrogen and The Bends",
+  "EncyDesc_Deathrun_Nitrogen": "The deeper you go, the higher your blood nitrogen level will be. In Deathrun your 'Safe Depth' will tend to settle out at about 3/4 of your current depth, so you'll want to get close to that depth without going above it, and then wait for your safe depth to improve. You must also avoid ascending too *quickly* (i.e. you can no longer just hold down the ascent button at all times), otherwise your nitrogen levels will increase rapidly.\nFirst Aid kits and floating air pumps can help with returning from the depths — eating certain kinds of native life may help as well.\n\nIn real life, 'The Bends', or decompression sickness, results from nitrogen bubbles forming in the bloodstream. The deeper a diver goes, the faster nitrogen accumulates in their bloodstream. If they ascend slowly and make appropriate 'deco stops' and 'safety stops', the nitrogen is removed as they exhale. But if they ascend too quickly, the nitrogen forms bubbles which can cause rashes, joint pains, lung damage, paralysis, and even death.\n\n1. Ascend slowly.\n2. Watch your 'Safe Depth' and Accelerometer.",
+  "Ency_Deathrun_PowerCosts": "Increased Power Usage",
+  "EncyDesc_Deathrun_PowerCosts": "The costs of fabrication (as well as battery charging, scanning, and water filtration) have increased dramatically following the imposition of the Fair Robotic Labor Standards Act. You may find that fabricators cost as much as {0} Alterra Standard Units per use. Power likewise recharges rather slowly.\n\nIn irradiated areas, the interference caused by radiation will further increase power use. Expect an increase of {1}x the normal cost.",
+  "Ency_Deathrun_Radiation": "Radioactive Fallout",
+  "EncyDesc_Deathrun_Radiation": "In the aftermath of a quantum drive explosion large amounts of radiation is known to seep into the immediate area. Radioactive particles commonly settle on the surface as well as any bodies of water up to a depth of around {0}m until trained staff seals the drive core and prevents further radiation leakage.\n\n1. Radiation affects the surface.\n2. Radiation penetrates up to {0}m below the surface.\n3. Repair any leaks to ameliorate effects.",
+  "Ency_Deathrun_VehicleDecompression": "Vehicle Decompression",
+  "EncyDesc_Deathrun_VehicleDecompression": "The Seamoth and Prawn Suit provide a sealed pressure environment for their pilots, preventing decompression sickness while they are being used. This does however result in significant power drain whenever the pilot exits the vehicle at depth — the deeper the exit, the higher the cost. Disembarking at a Moon Pool or directly into a Cyclops does not incur this cost. The Cyclops itself features a more sophisticated airlock system and can always be exited without any energy drain.",
   
   "dr_auroraRepairedBreathable": "The air filtration system roars to life!",
   "dr_lifepodHitBottom": "The lifepod has hit bottom!",
