Close #5: Special tanks generate air when not equipped.

--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -37,11 +37,11 @@
   "deathrunremade_reinforcedsuit3": "Reinforced Dive Suit Mk3",
   "Tooltip_deathrunremade_reinforcedsuit3": "An upgraded dive suit capable of protecting the user at all depths and providing heat protection up to 90C.",
   "deathrunremade_chemosynthesistank": "Chemosynthesis Tank",
-  "Tooltip_deathrunremade_chemosynthesistank": "A lightweight O2 tank that houses microorganisms that produce oxygen under high temperatures.",
+  "Tooltip_deathrunremade_chemosynthesistank": "A lightweight O2 tank that houses microorganisms that produce oxygen under high temperatures. Works at reduced efficiency when not equipped.",
   "deathrunremade_photosynthesistank": "Photosynthesis Tank",
-  "Tooltip_deathrunremade_photosynthesistank": "A lightweight air tank housing microorganisms which produce oxygen when exposed to sunlight.",
+  "Tooltip_deathrunremade_photosynthesistank": "A lightweight air tank housing microorganisms which produce oxygen when exposed to sunlight. Works at reduced efficiency when not equipped.",
   "deathrunremade_photosynthesistanksmall": "Small Photosynthesis Tank",
-  "Tooltip_deathrunremade_photosynthesistanksmall": "An air tank housing microorganisms which produce oxygen when exposed to sunlight.",
+  "Tooltip_deathrunremade_photosynthesistanksmall": "An air tank housing microorganisms which produce oxygen when exposed to sunlight. Works at reduced efficiency when not equipped.",
   
   "EncyPath_Deathrun": "Deathrun",
   "Ency_Deathrun_Intro": "A Deathrun Introduction",
