Fix save data not recognised on gamepass version.

--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -1,4 +1,6 @@
 {
+  "dr_savefile_invalid": "Non-Deathrun saves cannot be loaded while Deathrun is active.",
+  
   "deathrunremade_battery": "Lithium Battery",
   "Tooltip_deathrunremade_battery": "Advanced rechargeable mobile power source.",
   "deathrunremade_powercell": "Lithium Power Cell",
