#27: Add localisation for deaths and random starts.

--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -1,6 +1,67 @@
 {
   "dr_mainmenu_button": "Deathrun Stats",
   "dr_savefile_invalid": "Non-Deathrun saves cannot be loaded while Deathrun is active.",
+  "dr_intro_title": "DEATHRUN\n",
+  "dr_intro_start": "Start: ",
+  
+  "dr_start_vanilla": "Vanilla",
+  "dr_start_random": "Random",
+  "dr_start_barren_trench": "Barren Trench",
+  "dr_start_big_wreck": "Big Wreck",
+  "dr_start_bullseye": "Bullseye",
+  "dr_start_cave_diver": "Cave Diver",
+  "dr_start_close_call": "Close Call",
+  "dr_start_coral_enthusiast": "Coral Enthusiast",
+  "dr_start_craggy_grass": "Craggy Grass",
+  "dr_start_deep_green": "Deep Green",
+  "dr_start_far_from_kelp": "Far From Kelp",
+  "dr_start_furrows": "Furrows",
+  "dr_start_grand_reef": "Grand Reef",
+  "dr_start_hundred_below": "Hundred Below",
+  "dr_start_jellyshroom": "Jellyshroom",
+  "dr_start_kelpy": "Kelpy",
+  "dr_start_kelp_forest": "Kelp Forest",
+  "dr_start_kelp_wreckage": "Kelp Wreckage",
+  "dr_start_land_ahoy": "Land Ahoy",
+  "dr_start_much_room": "Much Room",
+  "dr_start_natural_flotation_devices": "Natural Flotation Devices",
+  "dr_start_precipice": "Precipice",
+  "dr_start_purple_delight": "Purple Delight",
+  "dr_start_shallow_arch": "Shallow Arch",
+  "dr_start_stinger_cave": "Stinger Cave",
+  "dr_start_terrace": "Terrace",
+  "dr_start_verdant_bridge": "Verdant Bridge",
+  
+  "dr_death_cause_acid": "Acid",
+  "dr_death_cause_cold": "Cold",
+  "dr_death_cause_collide": "Heavy Impact",
+  "dr_death_cause_drill": "Drill",
+  "dr_death_cause_electrical": "Electrocution",
+  "dr_death_cause_explosive": "Explosion",
+  "dr_death_cause_fire": "Fire",
+  "dr_death_cause_heat": "Unbearable Heat",
+  "dr_death_cause_lasercutter": "Laser Cutter",
+  "dr_death_cause_normal": "Mystery",
+  "dr_death_cause_poison": "Poison",
+  "dr_death_cause_pressure": "Pressure",
+  "dr_death_cause_puncture": "Puncturing",
+  "dr_death_cause_radiation": "Radiation",
+  "dr_death_cause_smoke": "Smoke",
+  "dr_death_cause_starve": "Starvation",
+  "dr_death_cause_undefined": "Mystery",
+  
+  "dr_death_cause_the_bends": "The Bends",
+  "dr_death_cause_asphyxiation": "Asphyxiation",
+  "dr_death_cause_drowning": "Drowning",
+  "dr_death_cause_cyclops_destruction": "Cyclops Destruction",
+  "dr_death_cause_lava": "Lava",
+  "dr_death_cause_magma": "Chunk of Magma",
+  "dr_death_cause_deus_ex_machina": "Deus Ex Machina",
+  "dr_death_cause_rocket_elevator": "Rocket Elevator",
+  "dr_death_cause_starvation": "Starvation",
+  "dr_death_cause_dehydration": "Dehydration",
+  "dr_death_cause_unknown_creature": "Unknown Creature",
+  "dr_death_cause_victory": "Victory",
   
   "deathrunremade_battery": "Lithium Battery",
   "Tooltip_deathrunremade_battery": "Advanced rechargeable mobile power source.",
@@ -99,6 +160,7 @@
   "dr_run_deathlessVictory": "Flawless victory in {0} days!",
   
   "dr_scoresui_title": "Deathrun Scores",
+  "dr_scoresui_hint": "Tip: ",
   "dr_scoresui_rank": "Rank",
   "dr_scoresui_start": "Start",
   "dr_scoresui_time": "Time",
