--- a/DeathrunRemade/Assets/Localization/English.json
+++ b/DeathrunRemade/Assets/Localization/English.json
@@ -63,6 +63,11 @@
   "dr_death_cause_unknown_creature": "Unknown Creature",
   "dr_death_cause_victory": "Victory",
   
+  "dr_options_lockin_warning": "Choose carefully. Any options you set here lock in and <color=#FF0000FF>cannot</color> be changed during an ongoing game.",
+  "dr_options_multpreview": "Your current settings grant you a score multiplier of <b>{0}x</b>.",
+  "dr_options_preset_label": "Select a config preset or customise below.",
+  "dr_options_ui_infotext": "These options can always be changed and will take effect immediately, even during a run. They do not affect your score.",
+  
   "deathrunremade_battery": "Lithium Battery",
   "Tooltip_deathrunremade_battery": "Advanced rechargeable mobile power source.",
   "deathrunremade_powercell": "Lithium Power Cell",
